styles.css
* {
    margin: 0;
    padding: 0;
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}
html {
    font-size: 14px;
    --text-color: white;
}
body {
    min-height: 100svh;
    display: flex;
    justify-content: center;
    align-items: center;
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center;
}

.main-container {
    position: fixed;
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-bottom: 18svh;
}
.sec-container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 15px;
}
.top-date {
    color: var(--text-color);
    font-size: 1.4rem;
    background-color: #3A506B;
    opacity: 0.8;
    padding: 4px 15px;
}

.bottom-time {
    display: grid;
    grid-template-columns: repeat(3, 1fr) auto;
    grid-template-rows: 1fr auto;
    column-gap: 1rem;
    font-size: 3rem;
}
/*Grid Children*/
.hour {
    grid-area: 1 / 1 / 2 / span 1;
}
.minute {
    grid-area: 1 / 2 / 2 / span 1;
}
.second {
    grid-area: 1 / 3 / 2 / span 1;
}
.hour-label {
    grid-area: 2 / 1 / 3 / span 1;
}
.minute-label {
    grid-area: 2 / 2 / 3 / span 1;
}
.second-label {
    grid-area: 2 / 3 / 3 / span 1;
}
.ampm {
    color: white;
    grid-area: 2 / 4 / 3 / span 1;
    font-size: 1.8rem;
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: #2d6a4f;
    opacity: 0.8;
    padding: 4px 1rem;
    font-weight: bold;
}

.box {
    color: var(--text-color);
    font-size: 4rem;
    width: 8rem;
    height: 6rem;
    background-color: #0B132B;
    opacity: 0.8;
    display: flex;
    justify-content: center;
    align-items: center;
}
.label {
    color: var(--text-color);
    font-size: 1.2rem;
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: #3A506B;
    opacity: 0.8;
}

/* Controls */
.controls {
    position: absolute;
    bottom: 6svh;
    right: 5vw;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 10px;
}
.controls > button {
    padding: 5px 0;
    width: 10rem;
    border: none;
    border-radius: 4px;
    background-color: #050914;
    opacity: 0.8;
    color: white;
    font-size: 1rem;
    font-weight: bold;
}

/* Ignore, preloads images */
.preload {
    position: absolute;
    opacity: 0;
    background: url(images/morning1.jpg), url(images/morning2.jpg), url(images/afternoon1.jpg), url(images/afternoon2.jpg), url(images/evening1.jpg), url(images/evening2.jpg), url(images/night1.jpg), url(images/night2.jpg), url(images/night3.webp);
}

